<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pl.piasta.kalkulator.MainActivity">
    <group android:checkableBehavior="single">
        <item android:id="@+id/action_simple_mode"
            android:titleCondensed="Prosty"
            android:title="@string/action_simple_mode"
            android:icon="@android:drawable/ic_menu_preferences"
            android:checked="true" />
        <item android:id="@+id/action_advanced_mode"
            android:titleCondensed="Zaawansowany"
            android:title="@string/action_advanced_mode"
            android:icon="@android:drawable/ic_menu_preferences" />
    </group>
    <item android:id="@+id/action_about"
        android:titleCondensed="O"
        android:title="@string/action_about" />
    <item android:id="@+id/action_exit"
        android:title="@string/action_exit" />
</menu>