<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.simplemode.SimpleModeFragment">

    <Button
        android:id="@+id/button_eight"
        style="@style/Theme.Kalkulator.Button.Number"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_eight"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_five"
        app:layout_constraintEnd_toStartOf="@+id/button_nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_seven"
        app:layout_constraintTop_toBottomOf="@+id/button_clear_all"
        app:layout_constraintVertical_bias="0.043" />

    <Button
        android:id="@+id/button_nine"
        style="@style/Theme.Kalkulator.Button.Number"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_nine"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toTopOf="@+id/button_six"
        app:layout_constraintEnd_toStartOf="@+id/button_divide"
        app:layout_constraintStart_toEndOf="@+id/button_eight"
        app:layout_constraintTop_toBottomOf="@+id/button_clear_all"
        app:layout_constraintVertical_bias="0.024" />

    <Button
        android:id="@+id/button_seven"
        style="@style/Theme.Kalkulator.Button.Number"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_seven"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_four"
        app:layout_constraintEnd_toStartOf="@+id/button_eight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_clear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/button_four"
        style="@style/Theme.Kalkulator.Button.Number"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_four"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_one"
        app:layout_constraintEnd_toStartOf="@+id/button_five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_seven"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.072" />

    <Button
        android:id="@+id/button_five"
        style="@style/Theme.Kalkulator.Button.Number"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_five"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_two"
        app:layout_constraintEnd_toStartOf="@+id/button_six"
        app:layout_constraintStart_toEndOf="@+id/button_four"
        app:layout_constraintTop_toBottomOf="@+id/button_eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.069" />

    <Button
        android:id="@+id/button_six"
        style="@style/Theme.Kalkulator.Button.Number"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_six"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_three"
        app:layout_constraintEnd_toStartOf="@+id/button_multiply"
        app:layout_constraintStart_toEndOf="@+id/button_five"
        app:layout_constraintTop_toBottomOf="@+id/button_nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.106" />

    <Button
        android:id="@+id/button_one"
        style="@style/Theme.Kalkulator.Button.Number"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_one"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_zero"
        app:layout_constraintEnd_toStartOf="@+id/button_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_four"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.169" />

    <Button
        android:id="@+id/button_two"
        style="@style/Theme.Kalkulator.Button.Number"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_two"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_dot"
        app:layout_constraintEnd_toStartOf="@+id/button_three"
        app:layout_constraintStart_toEndOf="@+id/button_one"
        app:layout_constraintTop_toBottomOf="@+id/button_five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.147" />

    <Button
        android:id="@+id/button_three"
        style="@style/Theme.Kalkulator.Button.Number"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_three"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_equals"
        app:layout_constraintEnd_toStartOf="@+id/button_subtract"
        app:layout_constraintStart_toEndOf="@+id/button_two"
        app:layout_constraintTop_toBottomOf="@+id/button_six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.128" />

    <Button
        android:id="@+id/button_zero"
        style="@style/Theme.Kalkulator.Button.Number"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_zero"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_dot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_one"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.243" />

    <Button
        android:id="@+id/button_dot"
        style="@style/Theme.Kalkulator.Button.NumberFormat"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_dot"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_equals"
        app:layout_constraintStart_toEndOf="@+id/button_zero"
        app:layout_constraintTop_toBottomOf="@+id/button_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.268" />

    <Button
        android:id="@+id/button_equals"
        style="@style/Theme.Kalkulator.Button.MathOperation"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_equals"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_add"
        app:layout_constraintStart_toEndOf="@+id/button_dot"
        app:layout_constraintTop_toBottomOf="@+id/button_three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.268" />

    <Button
        android:id="@+id/button_add"
        style="@style/Theme.Kalkulator.Button.MathOperation"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_add"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_equals"
        app:layout_constraintTop_toBottomOf="@+id/button_subtract"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.863" />

    <Button
        android:id="@+id/button_multiply"
        style="@style/Theme.Kalkulator.Button.MathOperation"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_multiply"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_subtract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_six"
        app:layout_constraintTop_toBottomOf="@+id/button_divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.738" />

    <Button
        android:id="@+id/button_divide"
        style="@style/Theme.Kalkulator.Button.MathOperation"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_divide"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_nine"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_change"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.497" />

    <Button
        android:id="@+id/button_subtract"
        style="@style/Theme.Kalkulator.Button.MathOperation"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_subtract"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_three"
        app:layout_constraintTop_toBottomOf="@+id/button_multiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.82" />

    <Button
        android:id="@+id/button_sign_change"
        style="@style/Theme.Kalkulator.Button.NumberFormat"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_sign_change"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_clear_all"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_clear_all"
        style="@style/Theme.Kalkulator.Button.ClearButton"
        android:layout_width="169dp"
        android:layout_height="70dp"
        android:text="@string/button_clear_all"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_eight"
        app:layout_constraintEnd_toStartOf="@+id/button_sign_change"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_clear"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/button_clear"
        style="@style/Theme.Kalkulator.Button.ClearButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/button_clear"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_seven"
        app:layout_constraintEnd_toStartOf="@+id/button_clear_all"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />
</androidx.constraintlayout.widget.ConstraintLayout>